fixed lrg actionLink icon alignment

--- a/src/scss/modules/content/actionLink/_actionLink.scss
+++ b/src/scss/modules/content/actionLink/_actionLink.scss
@@ -86,5 +86,6 @@ actionLink
 
     &:after {
         font-size: 26px;
+        line-height: 1.3;
     }
 }
